# libro

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  eslint.config.js  go.mod  go.sum  index.html  justfile  package.json  pyproject.toml  readme.md  tsconfig.app.json  tsconfig.electron.json  tsconfig.node.json  tsup.config.ts
.cursor/rules/: ja-rule.mdc
.github/: README.md
.github/workflows/: ci.yml  quality.yml
cmd/libro/: main.go
data/: lists-classics.csv  lists-horror.csv  lists-sci-fi.csv  stephen-king-novels.csv
electron/: ipc.ts  main.ts  preload.ts
electron/db/: books.ts  client.ts  lists.ts  migrate.ts  reports.ts
internal/cli/: book.go  chart.go  import.go  list.go  report.go  review.go  root.go
internal/config/: config.go
internal/db/: db.go
internal/models/: models.go
internal/store/: store.go
internal/tui/: add_book.go  book_detail.go  books.go  reading_list_books.go  reading_lists.go  styles.go  tui.go  year_selector.go
shared/: types.ts
src/: App.tsx  config.py  index.css  libro.py  vite-env.d.ts
src/actions/: add.py  report.py  show.py
src/features/add/: AddBookReviewForm.tsx
src/features/books/: BooksByYearView.tsx
src/features/lists/: ListsView.tsx
src/features/reports/: ReportsView.tsx
src/features/search/: SearchView.tsx
src/lib/: ReviewTable.tsx  api.ts  ratings.ts
src/libro/: config.py  main.py  models.py  utils.py
src/libro/actions/: add.py  db.py  importer.py  lists.py  modify.py  report.py  show.py  tui.py
tests/: __init__.py  conftest.py  test_actions.py  test_cli.py  test_models.py
(+9 files in other folders)
