[project]
name = "Libro"
version = "0.1.0"
description = "A command-line tool to track books read"
authors = [
    {name = "Marcus Kazmierczak", email = "marcus@mkaz.com"}
]
license = "MIT"
readme = "readme.md"
keywords = ["books", "reading", "library"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Education",
]
requires-python = ">=3.10"
dependencies = [
    "appdirs>=1.4",
    "rich>=13.3",
    "prompt-toolkit>=3.0.50",
]

[project.scripts]
libro = "libro.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/libro"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
pythonpath = "tasks"
testpaths = [
    "tests",
]


[tool.ruff]
target-version = "py310"
